# sql-parser

./: .gitignore  README.md  dune-project  sql_parser.opam
.github/workflows/: ci.yml
lib/: ast.ml  dune  executor.ml  lexer.ml  parser.ml  planner.ml  storage.ml  types.ml
test/: dune  test_coverage.ml  test_sql_parser.ml
